--- a/src/station1.html
+++ b/src/station1.html
@@ -7,5 +7,12 @@
 <title>Station 1</title>
 </head>
 <body>
+  <div>
+    <img src="./assets/image/railway-thumbnail.png" alt="railway-thumbnail">
+    <p>TechTrainの</p>
+    <p>使い方</p>
+    <p>hogehoge</p>
+    <span>hugahuga</span>
+  </div>
 </body>
 </html>
